--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.cbmwebdevelopment.belong">
+<manifest package="com.cbmwebdevelopment.belong"
+          xmlns:android="http://schemas.android.com/apk/res/android">
 
     <uses-permission android:name="android.permission.INTERNET"/>
 
@@ -13,23 +13,28 @@
         <activity
             android:name=".Splash"
             android:screenOrientation="portrait"
-            android:theme="@style/AppTheme.NoActionBar">
+            android:theme="@style/AppTheme">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
+                <action android:name="android.intent.action.MAIN"/>
+                <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
 
         <!--Main Activity-->
-        <activity android:name=".MainActivity"
+        <activity
+            android:name=".MainActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar"/>
-        <activity android:name=".ClassScheduleActivity"
+        <activity
+            android:name=".ClassScheduleActivity"
             android:label="Class Schedule | bELONg"
             android:theme="@style/AppTheme.NoActionBar"/>
-        <activity android:name=".ViewClassDetails"
+        <activity
+            android:name=".ViewClassDetails"
             android:parentActivityName=".ClassScheduleActivity"/>
+        <activity
+            android:name=".AddHomeworkActivity"
+            android:parentActivityName=".ViewClassDetails"/>
     </application>
 
 </manifest>
