--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,16 +25,24 @@
             android:name=".MainActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar"/>
+        <activity android:name=".SignInActivity"
+            android:theme="@style/AppTheme"
+            android:label="Sign In | bELONg"/>
         <activity
             android:name=".ClassScheduleActivity"
             android:label="Class Schedule | bELONg"
             android:theme="@style/AppTheme.NoActionBar"/>
         <activity
             android:name=".ViewClassDetails"
-            android:parentActivityName=".ClassScheduleActivity"/>
+            android:parentActivityName=".ClassScheduleActivity"
+            android:launchMode="singleTop"/>
         <activity
             android:name=".AddHomeworkActivity"
-            android:parentActivityName=".ViewClassDetails"/>
+            android:parentActivityName=".ViewClassDetails">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.cbmwebdevelopment.belong.MainActivity"/>
+            </activity>
     </application>
 
 </manifest>
